[package]
name = "timezonefinder"
version = "0.1.0"
authors = ["Andrew Fitzgerald <andrewcfitzgerald@gmail.com>"]
edition = "2018"

[dependencies]
geo = "*"
dbase = "*"
geo-types = "*"
geojson = {version="*",features=["geo-types"]}

[dev-dependencies]
criterion = "0.3"
rand = "*"

[[bench]]
name = "benchmark"
harness = false